fix: right sidebar z-index

--- a/assets/scss/partials/note-content.scss
+++ b/assets/scss/partials/note-content.scss
@@ -111,7 +111,6 @@ code.button {
       padding-top: 1.5rem;
       top: 0px;
       right: 0;
-      z-index: 9;
       display: flex;
       flex-direction: column;
       row-gap: 2rem;
